php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36614 Segfault when using Soap
Submitted: 2006-03-04 21:41 UTC Modified: 2006-03-15 17:18 UTC
From: alain dot russell at blackpepper dot co dot nz Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.1.2 OS: Mac OSX
Private report: No CVE-ID: None
 [2006-03-04 21:41 UTC] alain dot russell at blackpepper dot co dot nz
Description:
------------
Apache child crashes when I try and use the Soap functions

Reproduce code:
---------------
$lo_soap = new SoapClient("http://soap.sonicmobile.com/sonicmobile.wsdl");


Expected result:
----------------
No crash

Actual result:
--------------
[Sun Mar 05 09:27:18 2006] [notice] child pid 567 exit signal 
Bus error (10)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-04 21:42 UTC] alain dot russell at blackpepper dot co dot nz
Config etc about my install as follows:

libXML support	active
libXML Version	2.6.22
libXML streams	enabled

./configure \
--prefix=/usr/local/php5 \
--enable-sockets \
--with-xml \
--with-libxml-dir=/opt/local \
--with-gd \
--with-jpeg-dir=/opt/local \
--with-png-dir=/opt/local \
--with-freetype-dir=/opt/local \
--with-mysql=/usr/local/mysql \
--with-mysqli=/usr/local/mysql/bin/mysql_config \
--with-apxs2=/usr/local/apache2/bin/apxs \
--with-pspell=/opt/local \
--with-openssl=/usr \
--with-zlib=/usr \
--with-mcrypt=/opt/local \
--with-curl=/opt/local \
--disable-cgi \
--with-mhash=/opt/local \
--enable-mbstring=all \
--enable-mbregex \
--enable-ftp \
--enable-soap \
--with-imap=/users/admin/documents/imap-2004a \
--with-imap-ssl=/users/admin/documents/imap-2004a \
--disable-debug
 [2006-03-05 01:50 UTC] bjori@php.net
Thank you for this bug report. To properly diagnose the problem, we
need a backtrace to see what is happening behind the scenes. To
find out how to generate a backtrace, please read
http://bugs.php.net/bugs-generating-backtrace.php for *NIX and
http://bugs.php.net/bugs-generating-backtrace-win32.php for Win32

Once you have generated a backtrace, please submit it to this bug
report and change the status back to "Open". Thank you for helping
us make PHP better.

Please recompile with --enable-debug and provide backtrace
 [2006-03-10 10:10 UTC] alain dot russell at blackpepper dot co dot nz
It's on a production server so cant really go messing with 
Apache. I've generated a backtrace from php CLI .. will this 
be ok ? This crashes trying to run the file as well.

#0  schema_attribute_fixup (ctx=0xbfffe250, attr=0x27f0650) 
at /Users/admin/Desktop/php-5.1.2/ext/soap/php_schema.c:2120
#1  0x00172ecc in schema_type_fixup (ctx=0xbfffe250, 
type=0x27f0510) at /Users/admin/Desktop/php-5.1.2/ext/soap/
php_schema.c:2275
#2  0x001730c0 in schema_pass2 (ctx=0xbfffe250) at /Users/
admin/Desktop/php-5.1.2/ext/soap/php_schema.c:2325
#3  0x001752b4 in load_wsdl (this_ptr=0x27e7a40, 
struri=0xbfffe410 "http://soap.sonicmobile.com/
sonicmobile.wsdl") at /Users/admin/Desktop/php-5.1.2/ext/
soap/php_sdl.c:639
#4  0x0017e6e8 in get_sdl (this_ptr=0x27e7a40, 
uri=0x441141ee <Address 0x441141ee out of bounds>) at /
Users/admin/Desktop/php-5.1.2/ext/soap/php_sdl.c:2360
#5  0x00155034 in zif_SoapClient_SoapClient (ht=1, 
return_value=0x3a, return_value_ptr=0xa, this_ptr=0x27e7a40, 
return_value_used=1) at /Users/admin/Desktop/php-5.1.2/ext/
soap/soap.c:2215
#6  0x00299118 in zend_do_fcall_common_helper_SPEC 
(execute_data=0xbfffee20) at /Users/admin/Desktop/php-5.1.2/
Zend/zend_vm_execute.h:192
#7  0x00298d90 in execute (op_array=0x27e7430) at /Users/
admin/Desktop/php-5.1.2/Zend/zend_vm_execute.h:92
#8  0x0027eac4 in zend_execute_scripts (type=8, retval=0x0, 
file_count=3) at /Users/admin/Desktop/php-5.1.2/Zend/zend.c:
1101
#9  0x00242138 in php_execute_script 
(primary_file=0xbffff890) at /Users/admin/Desktop/php-5.1.2/
main/main.c:1720
#10 0x002f4e54 in main (argc=2, argv=0xbffffe2c) at /Users/
admin/Desktop/php-5.1.2/sapi/cli/php_cli.c:1077
 [2006-03-10 10:12 UTC] alain dot russell at blackpepper dot co dot nz
FYI .. when I run the file from the command line I get:

admin$ /usr/local/php5/bin/php -f test.php
Bus error
 [2006-03-15 16:07 UTC] mike@php.net
Assigned to maintainer.
 [2006-03-15 17:18 UTC] dmitry@php.net
The crash is fixed in CVS HEAD and PHP_5_1.

BTW: the WSDL file is wrong.
"soapenc" prefix is undefined.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 00:00:03 2026 UTC