Fixed Bug #36614 (Segfault when using Soap)