ext/soap/tests/bugs/bug36629.phpt
@@ -1,5 +1,7 @@
 --TEST--
 Bug #36629 (SoapServer::handle() exits on SOAP faults)
+--SKIPIF--
+<?php require_once('skipif.inc'); ?>
 --FILE--
 <?php
 function test1() {
